# rust_rdb_app

./: Cargo.toml  Dockerfile  Makefile  Makefile.toml  rust-toolchain.toml
.github/workflows/: build_image.yaml  ci.yaml  coverage.yaml
app/: Cargo.toml
app/src/: main.rs
database/: Cargo.toml
server/: Cargo.toml
server/src/: lib.rs
