[package]
name = "app"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[dependencies]
database = { path = "../database" }
server = { path = "../server" }
async-graphql-axum = "7.0.11"
axum = "0.7.7"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
http = "1.1.0"
async-graphql = "7.0.11"
